<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="E_Communication_Send_States" Id="{7ab92a7d-af87-4604-9375-0bf490cbd0b8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Communication_Send_States :
(
	E_COM_SEND_PREPARE := 0,
	E_COM_SEND_START_SEND,
	E_COM_SEND_WAIT_SENT,
	E_COM_SEND_FINALIZE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>